objects/ICR_History_Pending_Correction__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_Team__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assigned Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Assigned To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_By__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Confirmed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corrected_By_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Corrected By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Corrected_By__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Corrected By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Correction_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Correction Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Correction_Department__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Correction Department</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Confirmed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Confirmed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ICR_History__c</fullName>
        <label>ICR History</label>
        <referenceTo>ICR_History__c</referenceTo>
        <relationshipLabel>ICR History Pending Corrections</relationshipLabel>
        <relationshipName>ICR_History_Pending_Corrections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Initiator_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Initiator Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Old Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pending_Correction_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pending Correction Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rate Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requesting_Creator_Team__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Requesting/Creator Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Stage</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>ICR History Pending Correction</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>ICR History Pending Correction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ICR History Pending Corrections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>